--- a/assets/css/iconfont.css
+++ b/assets/css/iconfont.css
@@ -110,7 +110,7 @@
 .icon-food:before {
     content: "\eae3";
 }
-.icon-Acceuil2:before {
+.icon-Accueil2:before {
     content: "\eae4";
 }
 .icon-justice:before {
@@ -1103,13 +1103,13 @@
 .icon-health:before {
     content: "\ea40";
 }
-.icon-Acceuil-1:before {
+.icon-Accueil-1:before {
     content: "\ea41";
 }
-.icon-Acceuil-2:before {
+.icon-Accueil-2:before {
     content: "\ea42";
 }
-.icon-Acceuil:before {
+.icon-Accueil:before {
     content: "\ea43";
 }
 .icon-interface-1:before {
