--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -870,7 +870,7 @@ Accueil Section style
 ==================*/
 
 .Accueil{
-    background: url(../images/Accueil-bg.jpg) no-repeat scroll  center center;
+    background: url(../images/cloud.jpg) no-repeat scroll  center center;
     background-size: cover;
     position: relative;
     padding-top: 300px;
